--- a/_config.yml
+++ b/_config.yml
@@ -3,10 +3,10 @@
 #############################
 
 # The title that appears on the tab
-title: Andy Zhang's Gallery
+title: John's Gallery
 
 # The title on the web page
-full_name: Andy Zhang
+full_name: John Durdahl
 
 # The type of layout
 # Options: ROWS, SQUARES, COLUMNS
@@ -28,7 +28,7 @@ columns: 4
 max_height: 400
 
 # Handle
-instagram: andy.fuji
+instagram: jdurdahl
 
 ######################
 # END OF CONFIG CODE #
@@ -42,10 +42,10 @@ name: Gallery
 description: Photography Portfolio
 
 # Your name, as you want it to appear underneath each post and in the footer
-author: Andy Zhang
+author: John Durdahl
 
 # Your email if you want it to be linked on the contact page
-author_email: andzhng@gmail.com
+author_email: 
 
 # The directory for category index pages. Change it to something else if
 # for example you want links like /categories/category1 instead of /category1
